--- a/css/default.css
+++ b/css/default.css
@@ -8,3 +8,20 @@ body{
   margin:0 auto 0 auto;
   width:50%;
 }
+
+ul{
+  list-style:none;
+  margin:0;
+  padding:0;
+}
+
+li{
+  float:left;
+  margin-right:1%;
+}
+
+.image:after{
+  content:"";
+  display:block;
+  clear:both;
+}
